<resources>
    <string name="app_name">PartyHome</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="login">Login</string>
    <string name="registrar">registrar</string>
    <string name="senha">Senha</string>
    <string name="email_ou_login">Email ou login</string>
    <string name="bem_vindo_ao_party_home">Bem vindo ao Party Home</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadstro">Cadstro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>