<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_grandient"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/txt_slogan"
                android:text="@string/cadstro"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/edit_text_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="18dp"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_login"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/email_ou_login"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/bg_edittext_normal"
                app:layout_constraintBottom_toTopOf="@id/edit_text_password"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_password"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/senha"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@drawable/bg_edittext_normal"
                app:layout_constraintBottom_toTopOf="@id/btn_Cadastro" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/bg_button_normal"
                android:text="@string/cadastrar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
